white space issue mobile

--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -9,6 +9,11 @@
   text-align: center;
 }
 
+.homeLogo {
+  min-width: 300px;
+  max-width: 300px;
+}
+
 .actionButton {
   width: 150px;
   height: 60px;
@@ -55,6 +60,11 @@
   .subHeader {
     font-size: 2rem;
     text-align: left;
+  }
+
+  .homeLogo {
+    min-width: 600px;
+    max-width: 600px;
   }
 
   .actionButton {
